--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,7 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
+
 # Environments
 .env
 .venv
@@ -127,6 +128,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+myenv/
 
 # Spyder project settings
 .spyderproject
